--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="menu-content" >  
 				<div class="titulo"> 
 					<div>
-						<video class="video"  src="video/terraminer.mp4" height="125px"  width="450px" autoplay muted loop ></video>
+						<video class="video"  src="terraminer.mp4" height="125px"  width="450px" autoplay muted loop ></video>
 					</div>
 				 </div>
 
@@ -37,7 +37,7 @@
 							<h1>terraminer</h1>
 							<p>somos un equipo de profesionales cuyo compromiso es el asegurar el crecimiento y éxito de nuestros clientes, por lo que cumpliendo con los mas altos estándares garantizamos un servicio de excelencia acorde a las necesidades de nuestros clientes y socios.</p>
 					</div>
-						<img src="img/baner.jpg" height="100%" width="100%" >
+						<img src="baner.jpg" height="100%" width="100%" >
 				</div>
 
 			
